# klipper-mcu-configs

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build-site.yml
boarddata/board/v1/: example.json  example.schema.json  readme.md
boarddata/tools/: pyproject.toml
boarddata/tools/board2kconf/: __init__.py  __main__.py  configurator.py  kconfig.py  model.py  util.py
boarddata/tools/board2kconf/scripts/: test_all_boards.py
community/bigtreetech/octopus-pro/v1.1-stm32f429/: canbridge1m.config  usb.config
community/bigtreetech/octopus-pro/v1.1-stm32f446/: canbridge-1m.config  usb.Kconfig
community/ldo/leviathan/v1.2/: canbridge-1m.config
community/mellow3d/flysht36/v3/: rs232-bl16k.config
site/: index.html
src/python/kmcu/: __init__.py  commands.py  model.py
src/vue/: .gitignore  README.md  package-lock.json  package.json
src/vue/src/: App.vue
src/vue/src/components/: McuConfig.vue  McuConfigList.vue
