[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[project]
name = 'kboard'
authors = [
    {name = "Laikulo", email = "aaron@haun.guru"},
    {name = "TheRougeZeta", email = "idk@idk.invalid"}
]
dynamic = ["version"]
dependencies = [
    'kconfiglib'
]